crates/ignis_codegen_c/tests/snapshots/golden_c__c_drop_glue_explicit_with_string.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

// Type forward declarations
typedef struct Logger Logger;

// Type definitions
struct Logger {
    string field_0;
    i32 field_1;
};

void Logger_drop(struct Logger* self);
int main(void);

void Logger_drop(struct Logger* self) {
    // Locals
    struct Logger* l0; // self

    // Temporaries
    struct Logger* t0;

entry_0:
    l0 = self;
    return;
}

int main(void) {
    // Locals
    struct Logger l0; // l

    // Temporaries
    struct Logger* t0;

entry_0:
    t0 = &l0;
    (t0)->field_0 = ignis_string_from_cstr("app");
    (t0)->field_1 = 3;
    Logger_drop(&l0);
    return 0;
}
