crates/ignis_codegen_c/tests/snapshots/golden_c__c_main_result_i32_wrapper.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#ifndef IGNIS_RT_TYPES_H
#define IGNIS_RT_TYPES_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

typedef uint8_t u8;
typedef uint16_t u16;
typedef uint32_t u32;
typedef uint64_t u64;

typedef int8_t i8;
typedef int16_t i16;
typedef int32_t i32;
typedef int64_t i64;

typedef float f32;
typedef double f64;

typedef u8 boolean;

typedef u32 ignis_atom_t;
typedef u32 ignis_char_t;

typedef void *Pointer;

#define TRUE 1
#define FALSE 0

typedef u32 IgnisTypeId;

#define IGNIS_TYPE_I8_ID 0
#define IGNIS_TYPE_I16_ID 1
#define IGNIS_TYPE_I32_ID 2
#define IGNIS_TYPE_I64_ID 3
#define IGNIS_TYPE_U8_ID 4
#define IGNIS_TYPE_U16_ID 5
#define IGNIS_TYPE_U32_ID 6
#define IGNIS_TYPE_U64_ID 7
#define IGNIS_TYPE_F32_ID 8
#define IGNIS_TYPE_F64_ID 9
#define IGNIS_TYPE_BOOL_ID 10
#define IGNIS_TYPE_CHAR_ID 11
#define IGNIS_TYPE_STRING_ID 12
#define IGNIS_TYPE_PTR_ID 200

typedef struct IgnisString {
  char *data;
  size_t len;
  size_t cap;
} IgnisString;

typedef void *null;

#endif // IGNIS_RT_TYPES_H

#include <stdio.h>
#include <stdlib.h>
#include "types.h"

// Type forward declarations
typedef struct Result____i32____str Result____i32____str;

// Type definitions
struct Result____i32____str {
    u32 tag;
    union {
        struct {
            i32 field_0;
        } variant_0;
        struct {
            const char* field_0;
        } variant_1;
    } payload;
};
#define Result____i32____str_OK 0
#define Result____i32____str_ERROR 1

static struct Result____i32____str __ignis_user_main(void);

#line 8 "test.ign"
static struct Result____i32____str __ignis_user_main(void) {
    // Locals
    struct Result____i32____str l0; // _

    // Temporaries
    struct Result____i32____str* t0;
    struct Result____i32____str t1;

entry_0:
    t0 = &l0;
    __builtin_memset((void*)t0, 0, sizeof(*t0));
(t0)->tag = 0;
    (t0)->payload.variant_0.field_0 = 42;
    t1 = l0;
    return t1;
}

#line 102 "<generated-c>"

int main(int argc, char** argv) {
    ignis_runtime_init((i32)argc, argv);
    (void)argc;
    (void)argv;
    struct Result____i32____str __ignis_main_result = __ignis_user_main();
    if (__ignis_main_result.tag == 0) {
        return __ignis_main_result.payload.variant_0.field_0;
    }
    fprintf(stderr, "Error: %s\n", __ignis_main_result.payload.variant_1.field_0);
    exit(101);
}
