crates/ignis_codegen_c/tests/snapshots/golden_c__c_rc_copy_retain.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

int main(void);

int main(void) {
    // Locals
    IgnisRcBox* l0; // a
    IgnisRcBox* l1; // b

    // Temporaries
    IgnisRcBox* t0;
    IgnisRcBox* t1;

entry_0:
    t0 = (IgnisRcBox*)ignis_rc_alloc(sizeof(i32), NULL);
    *((i32*)ignis_rc_get(t0)) = 10;
    l0 = t0;
    t1 = l0;
    ignis_rc_retain(t1);
    l1 = t1;
    ignis_rc_release(l1);
    ignis_rc_release(l0);
    return 0;
}
