crates/ignis_codegen_c/tests/snapshots/golden_c__c_rc_record_field_drop.snap
---
source: crates/ignis_codegen_c/tests/golden_c.rs
expression: c_code
---
#include "types.h"

// Type forward declarations
typedef struct Holder Holder;

// Type definitions
struct Holder {
    void* field_0;
    i32 field_1;
};

// Rc drop helpers
static void ignis_rc_drop_i32(u8* payload) {
    (void)payload;
}

int main(void);

int main(void) {
    // Locals
    struct Holder l0; // h
    struct Holder l1; // _

    // Temporaries
    void* t0;
    struct Holder* t1;
    struct Holder t2;
    struct Holder* t3;
    i32* t4;
    i32 t5;

entry_0:
    t0 = (void*)my_rc_alloc((u64)sizeof(i32), (u64)_Alignof(i32), (void*)ignis_rc_drop_i32);
    *((i32*)my_rc_get(t0)) = 42;
    t1 = &l0;
    (t1)->field_0 = t0;
    (t1)->field_1 = 1;
    t2 = l0;
    l1 = t2;
    t3 = &l1;
    t4 = &((t3)->field_1);
    t5 = *t4;
    my_rc_release(l0.field_0);
    my_rc_release(l1.field_0);
    return t5;
}
